--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>Carrito</title>
 </head>
 <body>
-    <div>
-        <button>Aumentar</button>
-        <button>Disminuir</button>
-        <h4>Contador: <span id="resultado">0</span></h4>
+    <div class="container">
+        <h4>Productos</h4>
+        <div class="row" id="productos"></div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Cantidad</th>
+                    <th scope="col">Accion</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody id="items"></tbody>
+            <tfoot>
+                <tr id="footer">
+                    <th scope="row" colspan="5">No hay elementos en el carrito</th>
+                </tr>
+            </tfoot>
+        </table>
     </div>
+
+    <template id="template-productos">
+        <div class="col-2 mb-4">
+            <div class="card">
+                <img src="" alt="" class="card-img-top" style="max-width:135px; min-width:135px; max-height: 120px; min-height: 120px;">
+                <div class="card-body">
+                    <h5>Titulo</h5>
+                    <p>$ <span>Precio</span></p>
+                    <button class="btn btn-dark">Comprar</button>
+                </div>
+            </div>
+        </div>
+    </template>
+    <template id="template-items">
+        <tr>
+            <th scope="row">Id</th>
+            <td>Titulo</td>
+            <td>Cantidad</td>
+            <td>
+                <button class="btn btn-info btn-sm">+</button>
+                <button class="btn btn-danger btn-sm">-</button>
+            </td>
+            <td>$ <span>500</span></td>
+        </tr>
+    </template>
+
+    <template id="template-footer">
+        <th scope="row" colspan="2">Total productos</th>
+        <td>Total productos</td>
+        <td>
+            <button class="btn btn-danger btn-sm" id="vaciar-todo">Vaciar todo</button>
+        </td>
+        <td class="font-weight-bold">$ <span>5000</span></td>
+    </template>
+    <script src="app.js"></script>
 </body>
 </html>
