--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Carrito</title>
 </head>
 <body>
+    <div style="max-width: 200px;" class="container">
+        <form class="form-inline">
+        <label style="margin-right: 100px;" class="sr-only" for="inlineFormInputName2">Agregar personajes</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="valorId">
+        <label style="margin-right: 100px;" class="sr-only" for="inlineFormInputName2">Agregar precio</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="precio">
+        <button id="ingresarid" class="btn btn-primary mb-2">Agregar</button>
+    </div>
+    </form>
     <div class="container">
         <h4>Productos</h4>
         <div class="row" id="productos"></div>
