--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <div style="max-width: 200px;" class="container">
         <form class="form-inline">
-        <label style="margin-right: 100px;" class="sr-only" for="inlineFormInputName2">Agregar personajes</label>
-        <input type="text" class="form-control mb-2 mr-sm-2" id="valorId">
-        <label style="margin-right: 100px;" class="sr-only" for="inlineFormInputName2">Agregar precio</label>
-        <input type="text" class="form-control mb-2 mr-sm-2" id="precio">
+        <label class="sr-only" for="inlineFormInputName2">Agregar personajes</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="valorId" placeholder="Ingresar ID">
+        <label class="sr-only" for="inlineFormInputName2">Agregar Nombre</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="nombre" placeholder="Ingresar Nombre">
+        <label class="sr-only" for="inlineFormInputName2">Agregar precio</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="precio" placeholder="Ingresar Precio">
         <button id="ingresarid" class="btn btn-primary mb-2">Agregar</button>
     </div>
     </form>
